--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <title>Bounce Ball</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onkeydown="bird.uplift()">
-    <img src="assets/bird.png" id = "bird" alt="">
+<body id="main" >
     <canvas id="playGround" ></canvas>
-    <script src="bird.js"></script>
-    <script src="pillar.js"></script>
-    <script src="script.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
